# your_stretch

./: .env.example  .gitignore  data.json  data_except_order_callback.json  manage.py  pyproject.toml  requirements.txt  selected_models.json  yandex_905e0b5e2dd73782.html
.github/workflows/: deploy.yml
core/: admin.py  apps.py  models.py  signals.py  sitemaps.py  tg_bot.py  views.py
core/migrations/: 0001_initial.py  0002_alter_gallery_options_remove_gallery_image_and_more.py  0003_banner.py  0004_mobilebanner_alter_banner_options.py  0005_order.py  0006_callbackrequest.py  0007_alter_banner_image.py  0008_alter_order_area_alter_order_ceiling_type_and_more.py
github/workflows/: deploy.yml
static/: main.css  main.js  robot.txt
static/css/: blocks.css  carousel.css  contacts.css  form.css  galary.css  header.css  modal.css  product_card.css  work_card.css
templates/: landing.html
your_stretch/: asgi.py  settings.py  urls.py  wsgi.py
